[package]
name = "enum-iterator-derive"
version = "0.7.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Procedural macro to derive IntoEnumIterator"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/enum-iterator"
repository = "https://github.com/stephaneyfx/enum-iterator.git"
documentation = "https://docs.rs/enum-iterator-derive"
keywords = ["enum", "variants", "iterator", "enumerate"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["extra-traits"] }
